[tool.poetry]
name = "python-gdrive-training"
version = "0.1.0"
description = ""
authors = ["lycheejam <lycheejamwow@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
PyDrive2 = "^1.15.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.aws-sam
  | _build
  | buck-out
  | build
  | dist
)
'''
